--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.mvc.view.suffix=.jsp
 # db\uc124\uc815
 # \ub85c\uadf8
 spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mariadb://wisejia.iptime.org:3307/book
+spring.datasource.url=jdbc:log4jdbc:mariadb://wisejia.iptime.org:3307/
 # spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-# spring.datasource.url=jdbc:mariadb://wisejia.iptime.org:3307/book
-spring.datasource.username=book
-spring.datasource.password=01234567
+# spring.datasource.url=jdbc:mariadb://wisejia.iptime.org:3307/
+spring.datasource.username=
+spring.datasource.password=
 
 # mybatis\uc124\uc815
 mybatis.type-aliases-package=com.book.web
